# simulation_rework

./: README.md
src/scorpio7_control/: CMakeLists.txt  package.xml
src/scorpio7_control/config/: scorpio7_control.yaml
src/scorpio7_control/launch/: scorpio7_control.launch
src/scorpio7_description/: CMakeLists.txt  package.xml
src/scorpio7_description/meshes/: frontcam_link.STL  gps_link.STL  imu_link.STL  obrotowa_link.STL  rocker_l_link.STL  rocker_r_link.STL  wheel_fl_link.STL  wheel_fr_link.STL  wheel_rl_link.STL  wheel_rr_link.STL
src/scorpio7_description/urdf/: scorpio7.urdf.xacro
src/scorpio7_description/urdf/gazebo/: frontcam.gazebo.xml  gps.gazebo.xml  imu.gazebo.xml  materials.gazebo.xml  scorpio7.gazebo.xml  zed.gazebo.xml
src/scorpio7_description/urdf/include/: scorpio7_materials.urdf.xacro
src/scorpio7_description/urdf/zed_urdf/: zed_descr.urdf.xacro
src/scorpio7_gazebo/: CMakeLists.txt  package.xml
src/scorpio7_gazebo/launch/: scorpio7_world.launch
src/scorpio7_gazebo/worlds/: marsyard2020.world  marsyard2020.world.xacro  scorpio7.world
src/scorpio7_plugins/: CMakeLists.txt  package.xml
src/scorpio7_teleop/: CMakeLists.txt  package.xml
src/scorpio7_teleop/launch/: key_teleop.launch
